更新操作excel方法，合并为一个

--- a/config/email.ini
+++ b/config/email.ini
@@ -4,4 +4,4 @@ mail_host = smtp.qq.com
 mail_pass = swtpziuailjucafi
 mail_user = 517110453@qq.com
 sender = 517110453@qq.com
-receivers = 517110453@qq.com,437889925@qq.com
+receiver = 517110453@qq.com,chenmingfen@yunxitech.cn     # 只能发送给第一个邮箱，暂未找到方法发给所有邮箱
