增加数据库操作方法

--- a/config/email.ini
+++ b/config/email.ini
@@ -5,3 +5,12 @@ mail_user = 517110453@qq.com
 sender = 517110453@qq.com
 receivers = 517110453@qq.com,437889925@qq.com
 
+[sql_info]
+
+host = rm-2ze034s22kk79pys5o.mysql.rds.aliyuncs.com
+user = cdtest
+port = 3336
+password = uIkKCZgNay
+db_yx = yxtestdev4
+db_qiyuebao = qiyuebao_t
+charset = utf8
